More coding, lots of them still doesn't work. Must copy tap counter to it.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,7 @@
         android:id="@+id/button2"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="startGame" />
+        android:onClick="onClick" />
 
 
 </RelativeLayout>
