--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,91 +1,108 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:orientation="vertical">
+    tools:context=".MainActivity"
+    android:id="@+id/main">
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="TAP MANIA"
-        android:id="@+id/textView3"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp"
-        android:textStyle="bold|italic"
-        android:textSize="60dp" />
+        android:text="TAP MANIA"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="60dp"
+        android:textStyle="bold|italic" />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <TableLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Set Timer"
-        android:id="@+id/textView4"
-        android:textSize="20dp"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/button2" />
+        android:layout_below="@+id/textViewInstructions"
+        android:padding="40dp"
+        >
 
-    <com.siit.pitawat.tappingmania.myNumberPicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/numberPicker"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        max="60"
-        min="1"
-        android:clickable="false" />
+        <TableRow
+            android:layout_width="match_parent"
+            android:gravity="center_horizontal">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/p1name"
-        android:text="Player 1"
-        android:layout_below="@+id/numberPicker"
-        android:layout_alignStart="@+id/p2name"
-        android:layout_alignEnd="@+id/textView3"
-        android:editable="true" />
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="20dp"
+                android:text="Player 1 Name"
+                android:textColor="#000"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/p2name"
-        android:text="Player 2"
-        android:layout_below="@+id/p1name"
-        android:layout_alignEnd="@+id/textView3"
-        android:layout_alignStart="@+id/numberPicker"
-        android:elegantTextHeight="false"
-        android:editable="true" />
+            <EditText
+                android:id="@+id/p1name"
+                android:layout_width="17mm"
+                android:layout_height="wrap_content"
+                android:editable="true"
+                android:maxLength="10"
+                android:text="Player 1"
+                android:textColor="#939393"
+                />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Player 1 Name"
-        android:id="@+id/textView5"
-        android:layout_alignTop="@+id/p1name"
-        android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Player 2 Name"
-        android:id="@+id/textView6"
-        android:layout_alignTop="@+id/p2name"
-        android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/p2name" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:gravity="center_horizontal">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Player 2 Name"
+                android:textColor="#000"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <EditText
+                android:id="@+id/p2name"
+                android:layout_width="17mm"
+                android:layout_height="wrap_content"
+                android:editable="true"
+                android:maxLength="10"
+                android:textColor="#939393"
+                android:text="Player 2" />
+        </TableRow>
+
+
+    </TableLayout>
+
 
     <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Game"
-        android:id="@+id/button2"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="onClick" />
+        android:onClick="onClick"
+        android:text="Start Game" />
+
+    <TextView
+        android:id="@+id/textViewInstructions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView3"
+        android:layout_marginTop="51dp"
+        android:gravity="center"
+        android:text="Compete with your friend and see who can tap more rapidly in 1 minute!"
+        android:textIsSelectable="false"
+        android:paddingBottom="30dp"
+        android:textSize="20dp" />
 
 
 </RelativeLayout>
