--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:editable="true"
                 android:maxLength="10"
-                android:text="Player 1"
+                android:hint="Player 1"
                 android:textColor="#939393" />
 
 
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:editable="true"
                 android:maxLength="10"
-                android:text="Player 2"
+                android:hint="Player 2"
                 android:textColor="#939393" />
         </TableRow>
 
