--- a/app/src/main/res/layout/highscore.xml
+++ b/app/src/main/res/layout/highscore.xml
@@ -12,93 +12,92 @@
 
             <TextView
                 android:text="---BEST PLAYERS---"
+                android:textColor="#F00"
                 android:textSize="40dp"
-                android:textStyle="bold|italic"
-                android:textColor="#F00"/>
+                android:textStyle="bold|italic" />
         </TableRow>
     </TableLayout>
 
 
-
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
-
-
-            <TableRow android:gravity="center_horizontal">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:gravity="center"
-                    android:padding="10dip"
-                    android:text="NAME"
-                    android:textColor="#00F"
-                    android:textSize="30dp"/>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
 
-                <TextView
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:text="SCORE"
-                    android:textColor="#00F"
-                    android:textSize="30dp" />
+        <TableRow android:gravity="center_horizontal">
 
-            </TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="NAME"
+                android:textColor="#00F"
+                android:textSize="30dp" />
 
-            <TableRow android:gravity="center_horizontal">
 
-                <TextView
-                    android:gravity="center"
-                    android:padding="10dip"
-                    android:text="Peter"
-                    android:textSize="20dp" />
+            <TextView
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="SCORE"
+                android:textColor="#00F"
+                android:textSize="30dp" />
 
-                <TextView
-                    android:gravity="center"
-                    android:padding="10dip"
-                    android:text="96"
-                    android:textSize="20dp" />
-            </TableRow>
+        </TableRow>
 
-            <TableRow android:gravity="center_horizontal">
+        <TableRow android:gravity="center_horizontal">
 
-                <TextView
-                    android:gravity="center"
-                    android:padding="10dip"
-                    android:text="Oliver"
-                    android:textSize="20dp" />
+            <TextView
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Peter"
+                android:textSize="20dp" />
 
-                <TextView
-                    android:gravity="center"
-                    android:padding="10dip"
-                    android:text="88"
-                    android:textSize="20dp" />
-            </TableRow>
+            <TextView
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="96"
+                android:textSize="20dp" />
+        </TableRow>
 
-            <TableRow android:gravity="center_horizontal">
+        <TableRow android:gravity="center_horizontal">
 
-                <TextView
-                    android:gravity="center"
-                    android:padding="10dip"
-                    android:text="Julian"
-                    android:textSize="20dp" />
+            <TextView
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Oliver"
+                android:textSize="20dp" />
 
-                <TextView
-                    android:gravity="center"
-                    android:padding="10dip"
-                    android:text="80"
-                    android:textSize="20dp" />
-            </TableRow>
+            <TextView
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="88"
+                android:textSize="20dp" />
+        </TableRow>
 
-        </TableLayout>
+        <TableRow android:gravity="center_horizontal">
+
+            <TextView
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="Julian"
+                android:textSize="20dp" />
+
+            <TextView
+                android:gravity="center"
+                android:padding="10dip"
+                android:text="80"
+                android:textSize="20dp" />
+        </TableRow>
+
+    </TableLayout>
 
     <Button
         android:id="@+id/buttonReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reset"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:text="Reset" />
 
 
 </LinearLayout>
